; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_front.c_onearg.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/lcc/tst/extr_front.c_onearg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @onearg() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = load i32, i32* %2, align 4
  %7 = icmp ne i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %0
  store i32 1, i32* %3, align 4
  br label %10

9:                                                ; preds = %0
  store i32 2, i32* %4, align 4
  br label %10

10:                                               ; preds = %9, %8
  %11 = phi i32 [ 1, %8 ], [ 2, %9 ]
  %12 = load i32, i32* %5, align 4
  %13 = icmp ne i32 %12, 0
  %14 = zext i1 %13 to i64
  %15 = select i1 %13, i32 3, i32 4
  %16 = call i32 @f(i32 %15)
  %17 = load i32, i32* %1, align 4
  ret i32 %17
}

declare dso_local i32 @f(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
